# lift_app

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  cookiecutter-config-file.yml  docker-compose.yml  prestart.sh  pyproject.toml  req.txt  test_1.txt  worker-start.sh  еще 1 тест.txt  запуск.txt  новый файл.txt
alembic/: env.py
alembic/versions/: 2024_08_23_0017-797902b5b187_init.py  2024_08_23_0020-843f24f922c5_add_area_of_resposibility.py
backend/: backend.dockerfile  celeryworker.dockerfile  req.txt
backend/app/: README.md  Untitled.ipynb  alembic.ini  prestart.sh  pyproject.toml
src/: backend_pre_start.py  celeryworker_pre_start.py  config.py  errors.py  initial_data.py  main.py  session.py  templates_raise.py  tests_pre_start.py  utils.py  worker.py
src/alembic/: env.py
src/api/: deps.py
src/core/: config.py  email.py  response.py  roles.py  security.py  templates_raise.py
src/crud/: __init__.py  _crud_item.py  _crud_user.py  base.py  base_user.py  crud_act_base.py  crud_act_fact.py  crud_act_fact_of_mechanic.py  crud_admin.py  crud_client.py  crud_company.py  crud_contact_person.py  crud_contract.py  crud_cost_type.py  crud_division.py  crud_factory_model.py  crud_fault_category.py  crud_foreman.py  crud_location.py  crud_object.py  crud_order.py  crud_order_photo.py  crud_organization.py  crud_planned_to.py  crud_reason_fault.py  crud_role.py  crud_status.py  crud_step.py  crud_sub_step.py  crud_type_act.py  crud_type_contract.py  crud_type_object.py  crud_verif_code.py  crud_working_specialty.py
src/example/: security.py
(+488 files in other folders)
